2012-07-11	Santiago Munin <burning1@gmail.com>
	* res/drawable-hdpi/ic_launcher.png,
	  res/drawable-ldpi/ic_launcher.png,
      res/drawable-mdpi/ic_launcher.png,
      res/drawable-xhdpi/ic_launcher.png: Added application's icon.
    * res/drawable-mdpi/euro_currency_sign.png: Modified icon.
	* res/values/strings.xml: Little changes in entries.
	* src/es/udc/santiago/model/facade/CashFlowService.java: Removed an old TODO comment.
	* src/es/udc/santiago/view/cashflows/OverviewActivity.java: Fixed a print bug.
	* src/es/udc/santiago/view/utils/ViewUtils.java: Fixed the currency print in "es" locales.

2012-07-11	Santiago Munin <burning1@gmail.com>
	* test/es/udc/santiago/test/CashFlowServiceTest.java: Added test with endless movements.

2012-07-11	Santiago Munin <burning1@gmail.com>
	* src/es/udc/santiago/model/facade/CashFlow.java: Changed clone() method, now dates are cloned too.
	* src/es/udc/santiago/model/facade/CashFlowService.java: getAllWithFilter() now clones the received date because it will change its value.
	* src/es/udc/santiago/model/util/ModelUtilities.java: Fixed a null-pointer bug.
	* test/es/udc/santiago/test/CashFlowServiceTest.java: Added new values and tests.

2012-07-09	Santiago Munin <burning1@gmail.com>
	* res/values-es/arrays.xml, 
	  res/values-es/strings.xml: Spanish language.
	* res/layout/add_operation.xml: UI changes.
	* res/layout/movements_overview.xml: Id changed.
	* res/values-es/arrays.xml,
	  res/values/arrays.xml: Added GBP currency.
	* res/values/strings.xml: Few changes.
	* src/es/udc/santiago/model/facade/CashFlow.java: Added clone() method.
	* src/es/udc/santiago/model/facade/CashFlowService.java: Fixed a bug which could show movements out of period.
	* src/es/udc/santiago/view/cashflows/AddOperationActivity.java: UI control changes.
	* src/es/udc/santiago/view/cashflows/OverviewActivity.java: Added GBP currency.