@@ -2,3 +2,4 @@ bin/
 gen/
 TODO*
 .settings/
+lint.xml
